tests/baselines/reference/parser553699.errors.txt
tests/cases/conformance/parser/ecmascript5/RegressionTests/parser553699.ts(3,21): error TS1110: Type expected.


==== tests/cases/conformance/parser/ecmascript5/RegressionTests/parser553699.ts (1 errors) ====
    class Foo {
      constructor() { }
      public banana (x: public) { }
                        ~~~~~~
!!! error TS1110: Type expected.
    }
    
    class Bar {
      constructor(c: Bar) { }
    }